--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@
   padding-top: 58px;
   padding-bottom: 187px;
   background: linear-gradient(90deg, rgba(213, 32, 71, 0.8) 0%, rgba(238, 61, 27, 0.8) 100%), 
-                url(..\img\back_header.jpg) center center / cover;
+                url(../img/back_header.jpg) center center / cover;
 }
     .header-menu {
         display: flex;
