--- a/css/styles.css
+++ b/css/styles.css
@@ -245,3 +245,88 @@
                 border: 1px solid #ED4C5C;
                 cursor: pointer;
             }
+
+
+        /* F E A T U R E S */
+
+
+.features {
+    background: #FAFAFA;
+    padding: 63px 0 37px 0;
+}
+    .features .wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+        .features__title {
+            font-family: Lato;
+            font-style: normal;
+            font-weight: 600;
+            font-size: 36px;
+            line-height: 43px;
+            text-align: center;
+            color: black;
+            margin-bottom: 70px;
+        }
+        .features__container {
+            display: flex;
+            justify-content: center;
+        }
+            .features__items:nth-of-type(2) {
+                margin: 0 30px;
+            }
+            .features__items {
+                display: flex;
+                flex-direction: column;
+            }
+                .features__item-content {
+                    max-width: 84.4%;
+                    display: flex;
+                    flex-direction: column;
+                    /* flex-wrap: wrap; */
+                    justify-content: center;
+                    background: #FFFFFF;
+                    box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.1);
+                    border-radius: 8px;
+                    padding: 33px 32px 25px 32px;
+                    position: relative;
+                    left: 8.2%;
+                    bottom: 22%;
+                }
+                    .features__item-img {
+                        max-width: 350px;
+                    }
+
+                    .features__item-title {
+                        font-family: Lato;
+                        font-style: normal;
+                        font-weight: bold;
+                        font-size: 18px;
+                        line-height: 22px;
+                        text-align: center;
+                        color: #101010;
+                        margin-bottom: 20px;
+                    }
+                    .features__item-text {
+                        font-family: Lato;
+                        font-style: normal;
+                        font-weight: normal;
+                        font-size: 12px;
+                        line-height: 150%;
+                        text-align: center;
+                        color: #101010;
+                        padding-bottom: 20px;
+
+
+                    }
+                    .features__item-ReadMore {
+                        margin-top: 5px;
+                        font-family: Lato;
+                        font-style: normal;
+                        font-weight: bold;
+                        font-size: 12px;
+                        line-height: 150%;
+                        text-align: center;
+                        color: #ED4C5C;
+                    }
