--- a/css/styles.css
+++ b/css/styles.css
@@ -233,6 +233,7 @@
             justify-content: center;
             flex-basis: 50%;
             align-items: center;
+            margin-left: 33px;
         }
             .intro__button-play {
                 width: 66px;
@@ -244,6 +245,11 @@
                 outline: none;
                 border: 1px solid #ED4C5C;
                 cursor: pointer;
+                padding: 24px;
+                
+            }
+            .intro__video-img {
+                max-width: 100%;
             }
 
 
@@ -284,7 +290,6 @@
                     max-width: 84.4%;
                     display: flex;
                     flex-direction: column;
-                    /* flex-wrap: wrap; */
                     justify-content: center;
                     background: #FFFFFF;
                     box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.1);
@@ -295,7 +300,7 @@
                     bottom: 22%;
                 }
                     .features__item-img {
-                        max-width: 350px;
+                        max-width: 100%;
                     }
 
                     .features__item-title {
@@ -321,7 +326,6 @@
 
                     }
                     .features__item-ReadMore {
-                        margin-top: 5px;
                         font-family: Lato;
                         font-style: normal;
                         font-weight: bold;
