add new container

--- a/css/styles.css
+++ b/css/styles.css
@@ -334,3 +334,10 @@
                         text-align: center;
                         color: #ED4C5C;
                     }
+
+
+        /* T E C H N O L O G Y */
+
+.technology {
+    
+}
